src/messages/models/Template/styles/text/css/logo--alternative.css
.message__messaging {
    display: inline-block;
    white-space: normal;
    flex: 0 0 auto;
}

.message__headline span:only-child {
    white-space: nowrap;
}

.message__headline span.multi:first-child {
    display: none;
}

.message__headline span.multi:nth-child(2) {
    display: inline;
}

.message__messaging span.br {
    white-space: normal;
}

.message__logo-container {
    display: inline-block;
    margin-right: 0.6rem;
}

.message__content {
    display: inline-block;
}

